CuBoulder/tiamat-theme#1318 Corrects spacing issue for checkboxes and radio buttons on webforms

--- a/css/style.css
+++ b/css/style.css
@@ -1024,6 +1024,13 @@ form label {
   margin-bottom: 1em;
 }
 
+.form-type-radio .field-prefix,
+.form-type-checkbox .field-prefix,
+.form-checkbox,
+.form-radio {
+  margin-right: 0.333rem;
+}
+
 .webform-container-inline div,
 .webform-container-inline div.form-item {
   display: inline;
